# cpp-getgud-sdk-dev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json
GetGudSdk/: GetGudSdk.sln  GetGudSdk.vcxproj
Headers/: AttackActionData.h  BaseActionData.h  DamageActionData.h  DeathActionData.h  GG_SDK.h  GetGudSdk.h  HealActionData.h  PositionActionData.h  SpawnActionData.h
core_sources/structs/: AttackActionData.cpp  BaseActionData.cpp  DamageActionData.cpp  DeathActionData.cpp  HealActionData.cpp  PositionActionData.cpp  SpawnActionData.cpp
examples/Unity/Client_Server_GetGud/Assets/Plugins/GetGudSDK/: GetgudSDK.cs  (+1 more)
examples/Unreal_Engine_5/Client_Server_GetGud/Source/: Client_Server_GetGud.Target.cs  Client_Server_GetGudEditor.Target.cs
examples/Unreal_Engine_5/Client_Server_GetGud/Source/Client_Server_GetGud/: Client_Server_GetGud.cpp  Client_Server_GetGudCharacter.cpp  Client_Server_GetGudPlayerController.h  Client_Server_GetGudProjectile.cpp  Client_Server_GetGudProjectile.h  GetGudInstance.h  TP_WeaponComponent.cpp
examples/c/: main.c
examples/cpp/: main.cpp
examples/csharp/: GetGudSdk.cs  GetGudSdk_calls.cs  GetgudSDK.cs  GetgudSDK_calls.cs  Program.cs  _GetgudSDK.cs
examples/python/: example.py  getgudsdk_wrapper.py  requirements.txt  tasks.py
examples/python/cs2-dem-parser/: .env.example  dbscanner.py  getgud_cs2_parser.py  getgud_parser_structs.py  manager.py  requirements.txt
examples/unity/Client/Assets/Effects/: Ambient.vfx  TeleportBullet.vfx
examples/unity/Client/Assets/Materials/: BlueEmissive.mat  Bullet.mat  BulletTrail.mat  Dark.mat  Gray.mat  GreenEmissive.mat  Laser.mat  LaserBolt.mat  Light.mat  OrangeEmissive.mat  Teleporter.mat
examples/unity/Client/Assets/Scripts/: Player.cs
examples/unity/Client/Assets/Settings/: UniversalRP-HighQuality.asset
examples/unity/Client/ProjectSettings/: GraphicsSettings.asset
examples/unity/Server/Assets/Scripts/: Player.cs  PlayerMovement.cs
examples/unity/Server/ProjectSettings/: GraphicsSettings.asset
examples/unreal-engine-5-blueprint/GetgudSDKBlueprint/: GetgudSDKBlueprint.uplugin  README.md
examples/unreal-engine-5-blueprint/GetgudSDKBlueprint/Source/GetgudSDKBlueprint/: GetgudSDKBlueprint.Build.cs
examples/unreal-engine-5/Client_Server_GetGud/Plugins/GetGudSDK/: GetGudSDK.uplugin
examples/unreal-engine-5/Client_Server_GetGud/Source/: Client_Server_GetGud.Target.cs  Client_Server_GetGudServer.Target.cs
examples/unreal-engine-5/Client_Server_GetGud/Source/Client_Server_GetGud/: Client_Server_GetGud.Build.cs  Client_Server_GetGudCharacter.h  Client_Server_GetGudGameMode.cpp  Client_Server_GetGudGameMode.h  Client_Server_GetGudPlayerController.cpp  GetGudInstance.cpp  TP_PickUpComponent.cpp  TP_PickUpComponent.h  TP_WeaponComponent.cpp  TP_WeaponComponent.h
examples/unreal-engine-5/Client_Server_Getgud/Source/: Client_Server_GetgudEditor.Target.cs  Client_Server_GetgudServer.Target.cs
include/: GetGudSdk guy.h  GetGudSdk.h  GetGudSdk_C.h  GetgudSDK.h  GetgudSDK_C.h
include/actions/: AffectActionData.h  AttackActionData.h  BaseActionData.h  DamageActionData.h  DeathActionData.h  HealActionData.h  Helpers.h  PositionActionData.h  SpawnActionData.h
include/config/: Config.h
src/: CMakeLists.txt  GetGudSdk guy.cpp  GetGudSdk.cpp  GetGudSdk_C.cpp  GetGudSdk_t.cpp  GetgudSDK.cpp  GetgudSDK_C.cpp  dllMain.cpp
src/actions/: AffectActionData.cpp  AttackActionData.cpp  BaseActionData.cpp  DamageActionData.cpp  DeathActionData.cpp  HealActionData.cpp  PositionActionData.cpp  SpawnActionData.cpp
src/actions_buffer/: ActionsBuffer.cpp  ActionsBuffer.h
src/config/: Config.cpp  Config.h
src/game_container/: ChatMessageData.cpp  ChatMessageData.h  GameContainer guy.cpp  GameContainer guy.h  GameContainer.cpp  GameContainer.h  GameData guy.cpp  GameData guy.h  GameData.cpp  GameData.h  MatchData guy.cpp  MatchData guy.h  MatchData.cpp  MatchData.h  ReportData.cpp  ReportData.h
src/game_container/zip/: Zip.cpp  Zip.h
src/game_sender/: GameSender guy.cpp  GameSender guy.h  GameSender.cpp  GameSender.h
src/game_updater/: GameSender.cpp  GameSender.h
src/logger/: Logger.cpp  Logger.h
src/packets_buffer/: GameData.cpp  GameData.h  MatchData.cpp  MatchData.h  PacketsBuffer.cpp  PacketsBuffer.h
src/player_updater/: PlayerData.cpp  PlayerData.h  PlayerUpdater guy.h  PlayerUpdater.cpp  PlayerUpdater.h
src/report_sender/: ReportSender guy.h  ReportSender.cpp  ReportSender.guy.cpp  ReportSender.h
src/senders/: SharedGameSenders.cpp  SharedGameSenders.h  SharedPlayerUpdaters.cpp  SharedPlayerUpdaters.h  SharedReportSenders.cpp  SharedReportSenders.h
src/senders/game_sender/: GameSender.cpp  GameSender.h
src/senders/player_updater/: PlayerData.cpp  PlayerData.h  PlayerUpdater.cpp  PlayerUpdater.h
src/senders/report_sender/: ReportSender.cpp  ReportSender.h
src/shared_buffer/: SharedBuffer.cpp  SharedBuffer.h
src/utils/: Sanitizer.cpp  Sanitizer.h  Utils.cpp  Utils.h  Validator.cpp  Validator.h
starter/: main.cpp  starter.vcxproj
tests/C_Starter/: C_Starter.c  C_Starter.sln  C_Starter.vcxproj
tests/DemParser/: dem_parser.sln  dem_parser.vcxproj  game_1.txt  main.cpp
tests/Starter/: main.cpp  starter.vcxproj
tests/Starter/GetGudSdk/: config.txt
tests/StarterHyperMode/: StarterHyperMode.vcxproj  main.cpp
tests/Starter_cSharp_dll/: GetGudSdk.cs  GetGudSdk_calls.cs  GetgudSDK_calls.cs  Program.cs  Starter_cSharp_dll.csproj  Starter_cSharp_dll.sln
tests/Starter_dll_c/: main.c  starter.vcxproj
tests/Starter_dll_cpp/: main.cpp  starter.sln  starter.vcxproj
tests/Starter_lib_cpp/: CMakeLists.txt  main.cpp
tests/Starter_so_c/: main.c
tests/Starter_so_cpp/: CMakeLists.txt  main.cpp
tests/Test_scripts/: config.json  main.cpp  test_scripts.sln  test_scripts.vcxproj
tests/c-tests/: build.sh  c-tests.c  c-tests.cpp
tests/cpp-tests/: build.sh  cpp-tests.cpp
tests/csharp-tests/: Program.cs  csharp-tests.cs  csharp-tests.csproj  csharp-tests.sln
tools/: linux_so_Unity_UE.sh  linuxbuild.sh  linuxbuild_so.sh  winbuild.bat  winbuild_dll.bat
(+34 files in other folders)
